# src/core/application/dtos/update-video-metadata-dto.ts
@@ -1,0 +1,5 @@
+export interface UpdateVideoMetadataDTO {
+  id: string;
+  status: string;
+  savedZipKey?: string;
+}
